refactor: test, datajpa repositories